NGP-TWC/wdp-abstract-canvas#1415 fix field picker button alignment (#1417)

--- a/canvas_modules/common-canvas/assets/styles/common-properties.scss
+++ b/canvas_modules/common-canvas/assets/styles/common-properties.scss
@@ -378,7 +378,7 @@ input.number,
   border: none;
   padding: 0;
   padding-top: 2px;
-	padding-left: 10px;
+	padding-left: 4px;
 }
 
 #field-picker-filter-list{
@@ -476,7 +476,7 @@ input.number,
 
 .reset-fields-button-icon {
   float: left;
-  margin-top: -2px;
+  margin-top: -5px;
 }
 .reset-fields-button-icon > svg{
   height: 18px;
